Move phone call button to the app view object
Move phone call button to the app view object
from ControlButtons object because it isn't related
to the ControlButtons view

--- a/css/general.css
+++ b/css/general.css
@@ -1777,3 +1777,21 @@ to {
     width: 50px;
     z-index: 1001;
 }
+
+#app .phone_call_button {
+    height: 40px;
+    width: 163px;
+    font-size: 20px;
+    line-height: 41px;
+    border: 1px solid #FFFF30;
+    top: 2px;
+    color: #FFFF30;
+    padding-left: 10px;
+    left: 244px;
+    transition: left 2s;
+    z-index: 1;
+}
+
+#app .phone_call_button.expand {
+    left: 156px;
+}
