--- a/css/general.css
+++ b/css/general.css
@@ -41,6 +41,10 @@ div {
     padding: 0;
 }
 
+div.glider-slide {
+    position: relative;
+}
+
 #tbtTurnListView .list-item.high-lighted-mode .ico-overlay
 {
     background:url(../images/template/imagetype-pattern-highlighted.png);
@@ -164,6 +168,167 @@ div {
      Mac font smoothing */
     -webkit-font-smoothing: antialiased;
     /*margin: 25px auto;*/
+}
+
+
+button.next-app {
+    top: 0%;
+    width: 25px;
+    right: 0px;
+    height: 100%;
+    background: url(../images/common/button.png) repeat;
+    border-radius: 3px;
+    border: 1px solid #393939;
+} 
+
+button.next-home .ico{
+    position: relative;
+    height: 15%;
+    transform: rotate(180deg);
+}
+
+button.next-app .ico{
+    position: relative;
+    height: 7%;
+    transform: rotate(180deg);
+}
+
+button.prev-app {
+    top:0%;
+    width:25px;
+    height:100%;
+    background: url(../images/common/button.png) repeat;
+    left:0%;
+    border-radius: 3px;
+    border: 1px solid #393939;
+}
+
+button.prev-home .ico{
+    position: relative;
+    height: 15%;
+}
+
+button.prev-app .ico{
+    position: relative;
+    height: 7%;
+}
+
+.glider {
+    left: 0%;
+    width: 420px;
+    height: 261px;
+    margin: 0px;
+}
+
+.glider-prev {
+    width: 17px;
+    height: 60px;
+    left: 0px;
+    background-color: white;
+    /* position: absolute; */
+    top: 0px;
+}
+
+.glider-track {
+    width: 100%;
+    height: 100%;
+}
+
+.WidgetsHome .glider-dots {
+    left: 50%;
+}
+
+.gliderview .glider-dots {
+    left:50%;
+}
+
+.WidgetContainer.glider {
+    height:100%;
+    width:79%;
+}
+
+button.prev-home {
+    top: 0%;
+    width: 48px;
+    height: 100%;
+    background: url(../images/common/button.png) repeat;
+    left: 0%;
+    border-radius: 3px;
+    border: 1px solid #393939;
+}
+
+button.next-home {
+    top: 0%;
+    width: 48px;
+    right: 0px;
+    height: 100%;
+    background: url(../images/common/button.png) repeat;
+    border-radius: 3px;
+    border: 1px solid #393939;
+}
+
+#WidgetsHome.ico {
+    height:20%;
+}
+
+.WidgetsHome {
+    position:relative;
+    height:100%;
+    width:100%;
+}
+
+.WidgetGlider{
+    opacity:0;
+    z-index: -10;
+    top: 40px;
+    width: 480px;
+    height: 400px;
+    left: -4%;
+    position: relative;
+    transition: 2s;
+    transform: rotate(90deg);
+}
+
+.WidgetGlider.expand {    
+    opacity: 1;    
+}
+
+#add-window .text1 {
+    top: 24%;
+    left: -8%;
+    width: 100px;
+    height: 20px;
+    line-height: 20px;
+    position: absolute;
+    overflow: hidden;
+    text-align: center;
+    text-overflow: ellipsis;
+    transform: rotate(-90deg)translate(-100%);
+}
+
+.glider-slide {
+    user-select: none;
+    justify-content: center;
+    align-content: center;
+    width: 100%;
+    min-width: 150px;
+    background-color:black;
+    -webkit-transition: opacity 1s ease-in-out;
+    border: #A6A6A6 solid 2px;
+    border-radius: 6px;
+    text-align: center;
+}
+
+
+#add-window .addButton {
+    top: 32%;
+    left: 43%;
+    transform: rotate(-90deg)translate(-100%);
+}
+
+.addButton .ico {
+    width:50px;
+    filter: invert(80%);
 }
 
 /* TTS popUp*/
@@ -1794,4 +1959,170 @@ to {
 
 #app .phone_call_button.expand {
     left: 156px;
+}
+
+.widgetTemplate .windowName {
+    top: -30%;
+    left: -70%;
+    width: 300px;
+    height: 20px;
+    line-height: 20px;
+    position: absolute;
+    overflow: hidden;
+    text-align: center;
+    text-overflow: ellipsis;
+    transform: rotate(-90deg)translate(-100%);
+}
+
+.widgetTemplate .button {
+    top: -6%;
+    left: 8%;
+    transform: rotate(-90deg)translate(-100%);
+    border: 1px solid #333;
+    border-radius: 2px;
+    line-height: 38px;
+    background-image: url(../images/list/list_item_bg.png);
+    cursor: pointer;
+}
+
+.widgetTemplate .toolTip {
+    top: -2%;
+    left: 8%;
+    transform: rotate(-90deg)translate(-100%);
+    border: 1px solid #333;
+    border-radius: 2px;
+    line-height: 38px;
+    background-image: url(../images/list/list_item_bg.png);
+    cursor: pointer;
+    z-index: 10000;
+}
+
+.widgetTemplate.btn_with_grp .button.softButton_1 {
+    top: 70%;
+    left: 47%;
+    
+}
+
+.widgetTemplate.btn_with_grp .button.softButton_2 {
+    top: 74%;
+    left: 72%;
+}
+
+.widgetTemplate.btn_with_grp .button.softButton_3 {
+    top: 55%;
+    left: 47%;
+}
+
+.widgetTemplate.btn_with_grp .button.softButton_4 {
+    top: 59%;
+    left: 72%;
+}
+
+.widgetTemplate.btn_with_grp .button.softButton {
+    width: 45px;
+    height: 45px;
+    border: 1px solid #9a9494;
+    border-radius: 67px;
+    line-height: 40px;
+    background-image: url(../images/list/list_item_bg.png);
+    cursor: pointer;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-size: small;
+}
+
+.widgetTemplate.btn_with_grp .button.softButton:hover {
+    overflow: visible;
+}
+
+.widgetTemplate.btn_with_grp .textField_1 {
+    left: 10px;
+    top: 35px;
+    transition: 2s;
+}
+
+.widgetTemplate.btn_with_grp .textField_2 {
+    left: 10px;
+    top: 65px;
+    transition: 2s;
+}
+
+.widgetTemplate.txt_with_grp .textField_1 {
+    left: 10px;
+    top: 70px;
+    transition: 2s;
+}
+
+.widgetTemplate.txt_with_grp .textField_2 {
+    left: 10px;
+    top: 100px;
+    transition: 2s;
+}
+
+.widgetTemplate.grp_with_text .textField_1 {
+    left: 150px;
+    top: 70px;
+    transition: 2s;
+}
+
+.widgetTemplate.grp_with_text .textField_2 {
+    left: 150px;
+    top: 100px;
+    transition: 2s;
+}
+
+.widgetTemplate .widget_info {
+    transform: rotate(-90deg);
+    width: 373px;
+    height: 174px;
+    top: 30%;
+    position: relative;
+    right: 96px;
+}
+
+.widgetTemplate .widget_info .app_icon {
+    top: 68px;
+    left: 230px;
+    position: relative;
+    border: #A6A6A6 solid 2px;
+    border-radius: 40px;
+    width: 53px;
+    transition: 2s;
+}
+
+.widgetTemplate.btn_with_grp .widget_info .widget_icon {
+    top: 43px;
+    left: 50px;
+    height: 111px;
+    position: relative;
+    border: #A6A6A6 solid 1px;
+    border-radius: 0px;
+    width: 111px;
+    transition: 2s;
+}
+
+.widgetTemplate.txt_with_grp .widget_info .widget_icon {
+    top: 43px;
+    left: 50px;
+    height: 111px;
+    position: relative;
+    border: #A6A6A6 solid 1px;
+    border-radius: 0px;
+    width: 111px;
+    transition: 2s;
+}
+
+.widgetTemplate.grp_with_text .widget_info .widget_icon {
+    top: 43px;
+    left: -140px;
+    height: 111px;
+    position: relative;
+    border: #A6A6A6 solid 1px;
+    border-radius: 0px;
+    width: 111px;
+    transition: 2s;
+}
+
+#addWidgetPopUp .list-item span {
+    margin-left: 50px;
 }
