Implementation of feature allow multiple modules per module type
The Changes are:

- Were added two emulation type of vehicle:
	- 2x2
	- 2x3
- Were added views to choose emulation type and configure coverage:
	- VehicleEmulationView.js
	- VehicleModuleCoverageView.js

- AudioModel object was created to agregate all media models:
	- CDModel
	- USBModel
	- BlueToothModel
	- LineInModel
	- IPodModel
	- RadioModel
- RCModulesController object was created to aggregate multiple instances of
	all RC components:
	- AudioModel
	- ClimateModel
	- SeatModel
	- RadioModel
	- HMISettingsModel
	- LightModel
- All data and RPC related to RC processed by RCModulesController:
	- Set/Get OnInteriorVehicleData
	- GetCapabilities
	- OnInteriorVehicleData

--- a/css/buttonControls.css
+++ b/css/buttonControls.css
@@ -496,9 +496,34 @@
     margin-top: 10px;
 }
 
-#app_controlButtons .imageModeSelect{
+#app_controlButtons .RCInfo {
     position: absolute;
     width: 150px;
+    height: 30px;
+    top: 310px;
+    left: 1215px;
+    -webkit-transition: 2s;
+    opacity: 0;
+    display: none;
+}
+
+#app_controlButtons .RCInfo.show {
+    opacity: 1;
+    display: block;
+}
+
+#app_controlButtons .RCModulesSelect{
+    position: absolute;
+    width: 175px;
+    height: 30px;
+    top: 20px;
+    color: white;
+    background: #393939;
+}
+
+#app_controlButtons .imageModeSelect{
+    position: absolute;
+    width: 175px;
     height: 30px;
     top: 252px;
     left: 1215px;
@@ -511,6 +536,8 @@
     left: 1215px;
     width: 150px;
 }
+
+
 
 #app_controlButtons .languageSelect {
     position: absolute;
