--- a/css/general.css
+++ b/css/general.css
@@ -1491,6 +1491,211 @@ margin-top: 90px;
     text-shadow: 1px 1px 2px black, 0 0 6px rgba(255, 0, 0, 0.6), 0 11px 10px black;
 }
 
+#vehicle_emulation_view {
+    width: 800px;
+    height: 480px;
+    z-index: 12002;
+    background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, rgb(218, 218, 218)), color-stop(0.3, rgb(0, 0, 0)));
+}
+
+#vehicle_emulation_view .apply_settings {
+    width: 130px;
+    height: 45px;
+    position: absolute;
+    cursor: pointer;
+    float: right;
+    font-size: 20px;
+    text-align: center;
+    line-height: 45px;
+    right: 40px;
+    bottom: 20px;
+}
+
+#vehicle_emulation_view .coverage_settings {
+    width: 130px;
+    height: 45px;
+    position: absolute;
+    cursor: pointer;
+    float: right;
+    font-size: 20px;
+    text-align: center;
+    line-height: 45px;
+    right: 40px;
+    bottom: 70px;
+}
+
+#vehicle_emulation_view .option_no_emulation_view {
+    position: absolute;
+    top: 27px;
+    left: 100px;
+    width: 154px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: gray;
+    height: 322px;
+    text-align: center;
+    -webkit-transition: all 0.25s linear;
+}
+
+
+#vehicle_emulation_view .option_no_emulation_view.select,
+#vehicle_emulation_view .option_vehicle2x3.select,
+#vehicle_emulation_view .option_vehicle3x3.select,
+#vehicle_emulation_view .option_no_emulation_view.select:hover,
+#vehicle_emulation_view .option_vehicle2x3.select:hover,
+#vehicle_emulation_view .option_vehicle3x3.select:hover
+{
+    border-color: orange;
+    -webkit-transition: all 0.25s linear;
+}
+
+#vehicle_emulation_view .option_no_emulation_view:hover,
+#vehicle_emulation_view .option_vehicle2x3:hover,
+#vehicle_emulation_view .option_vehicle3x3:hover {
+    border-color: #d4af6b;
+    cursor: pointer;
+    -webkit-transition: all 0.25s linear;
+}
+
+#vehicle_emulation_view .option_vehicle2x3 {
+    position: absolute;
+    top: 110px;
+    right: 260px;
+    width: 322px;
+    height: 154px;
+    transform: rotate(-90deg);
+    background: url(../images/home/vehicle__2x3.jpg) no-repeat;
+    background-size: contain;
+    border-width: 5px;
+    border-style: solid;
+    border-color: gray;
+}
+
+#vehicle_emulation_view .option_vehicle3x3 {
+    position: absolute;
+    top: 110px;
+    right: 70px;
+    width: 322px;
+    height: 154px;
+    transform: rotate(90deg);
+    background: url(../images/home/vehicle__3x3.jpg) no-repeat;
+    background-size: cover;
+    border-width: 5px;
+    border-style: solid;
+    border-color: gray;
+}
+
+#vehicle_emulation_view .radioNoEmulation {
+    position: absolute;
+    top: 375px;
+    left: 100px;
+}
+
+#vehicle_emulation_view .radioVehicle2x3 {
+    position: absolute;
+    top: 375px;
+    left: 320px;
+}
+
+#vehicle_emulation_view .radioVehicle3x3 {
+    position: absolute;
+    top: 375px;
+    left: 510px;
+}
+
+#vehicle_module_coverage_view {
+    width: 800px;
+    height: 480px;
+    z-index: 12003;
+    background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, rgb(218, 218, 218)), color-stop(0.3, rgb(0, 0, 0)));
+}
+
+#vehicle_module_coverage_view .apply_settings {
+    width: 130px;
+    height: 45px;
+    position: absolute;
+    cursor: pointer;
+    float: right;
+    font-size: 20px;
+    text-align: center;
+    line-height: 45px;
+    right: 40px;
+    bottom: 20px;
+}
+
+#vehicle_module_coverage_view .reset_settings {
+    width: 130px;
+    height: 45px;
+    position: absolute;
+    cursor: pointer;
+    float: right;
+    font-size: 20px;
+    text-align: center;
+    line-height: 45px;
+    right: 180px;
+    bottom: 20px;
+}
+
+#vehicle_module_coverage_view .codeEditor {
+    top: 30px !important;
+}
+
+#vehicle_module_coverage_view .codeEditor .button {
+    display: none;
+}
+
+#vehicle_module_coverage_view .editor {
+    top: 75px;
+}
+
+#vehicle_module_coverage_view .labelOptions {
+    top: 45px;
+    left: 120px;
+    z-index: 5;
+}
+
+#vehicle_module_coverage_view .optionClimate {
+    position: absolute;
+    top: 75px;
+    left: 125px;
+    z-index: 5;
+}
+
+#vehicle_module_coverage_view .optionRadio {
+    position: absolute;
+    top: 75px;
+    left: 225px;
+    z-index: 5;
+}
+
+#vehicle_module_coverage_view .optionSeat {
+    position: absolute;
+    top: 75px;
+    left: 310px;
+    z-index: 5;
+}
+
+#vehicle_module_coverage_view .optionAudio {
+    position: absolute;
+    top: 75px;
+    left: 400px;
+    z-index: 5;
+}
+
+#vehicle_module_coverage_view .optionLight {
+    position: absolute;
+    top: 75px;
+    left: 490px;
+    z-index: 5;
+}
+
+#vehicle_module_coverage_view .optionHmiSettings {
+    position: absolute;
+    top: 75px;
+    left: 575px;
+    z-index: 5;
+}
+
 .radioButton .label{
     margin-left: 16px;
     color: #848484;
@@ -1563,16 +1768,30 @@ input[type=radio]:checked ~ .label {
 
 #warning_view .okbut {
     width: 130px;
-    height: 51px;
-    position: relative;
-    top: 30px;
+    height: 45px;
+    position: absolute;
     cursor: pointer;
     float: right;
-    margin-right: 83px;
     display: none;
     font-size: 20px;
     text-align: center;
-    line-height: 50px;
+    line-height: 45px;
+    right: 40px;
+    bottom: 25px;
+}
+
+#warning_view .vehicle_emulation_btn {
+    width: 130px;
+    height: 45px;
+    position: absolute;
+    cursor: pointer;
+    float: right;
+    display: none;
+    font-size: 20px;
+    text-align: center;
+    line-height: 45px;
+    bottom: 75px;
+    right: 40px;
 }
 
 #warning_view .components{
